2001-06-09  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (OS_error): [macro]: use asciz_out_1()

2001-06-09  Sam Steingold  <sds@gnu.org>

	* install.lisp: create CLISP.BAT on desktop

2001-06-08  Bruno Haible  <haible@clisp.cons.org>

	* autoconf/libtool.m4: Upgrade to libtool-1.4.

2001-06-08  Bruno Haible  <haible@clisp.cons.org>

	* autoconf/config.guess: Update to GNU version 2001-05-11.
	* autoconf/config.sub: Likewise.

2001-06-08  Sam Steingold  <sds@gnu.org>

	Fixed MIT-CLX build.
	* modules/clx/mit-clx/dependent.lisp (conditional-store):
	GET-SETF-METHOD is in EXT now
	Reported by Paolo Amoroso <amoroso@mclink.it>
	* modules/clx/mit-clx/manager.lisp (cut-buffer): use
	DEFINE-SETF-EXPANDER instead of DEFINE-SETF-METHOD
	* modules/clx/mit-clx/resource.lisp (initialize-resource-database):
	WM-RESOURCES is not exported from XLIB

2001-06-07  Sam Steingold  <sds@gnu.org>

	Print (c-ptr (c-function)) with arguments and correct "()"
	* foreign1.lisp (element, deref, slot, cast, typeof, sizeof,
	bitsizeof): new local (flet) function `foreign-place-p'
	(ctype-type): new function
	(parse-c-function, prepare-c-typedecl, to-c-typedecl,
	note-c-call-in): use it
	(flag-set-p): new function
	(deparse-c-type, note-c-call-in, count-inarguments): use it
	(flag-to-language, language-to-flag): new functions
	(deparse-c-type, parse-c-function): use them, respectively
	(deparse-c-type): new labels: `new-type' and `deparse-slot'
	(split-c-fun-arglist): new function
	(note-c-call-in): use it
	(to-c-typedecl): print the function name in () for c-prt
	and also print the arglist

2001-06-07  Sam Steingold  <sds@gnu.org>

	* modules/clx/mit-clx/clx.lisp (boolean): built-in CLISP type
	since 1998-04-08, do not redefine
	* modules/clx/mit-clx/package.lisp (boolean): do not shadow
	Reported by Paolo Amoroso <amoroso@mclink.it>

2001-06-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (LPARTS): add foreign1 only when foreign is in CPARTS

2001-06-02  Sam Steingold  <sds@gnu.org>
